ANZARD-257: prevent wrap of data entry section header

--- a/app/assets/stylesheets/anzard.sass
+++ b/app/assets/stylesheets/anzard.sass
@@ -411,6 +411,9 @@ input[type="hidden"]
   margin-left: auto
   margin-right: auto
 
+.section-nav li
+  display: inline-block
+
 // ANZARD Logos
 img.logo
   height: 140px
